--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(fit_cvae_encoder)
 export(multi_dtr)
 export(plot_dtr_forest)
 export(qlearning_bayes)
-export(qlearning_classQ)
 export(qlearning_elasticnet)
+export(qlearning_gof_plot)
 export(qlearning_lasso)
 export(simulate_dtr_data)
